--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -6,8 +6,10 @@
 </head>
 <body>
     <hgroup>
-        <h1>Error.</h1>
-        <h2>An error occurred while processing your request.</h2>
+        <h1 class="text-danger">Error.</h1>
+        <h3>Controller: @Model.ControllerName - Action: @Model.ActionName</h3>
+        <h3>Error Detail: @Model.Exception.Message</h3>
+        <h4>An error occurred while processing your request.</h4>
     </hgroup>
 </body>
 </html>
